<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="LoginPage">LoginPage</string>
    <string name="RegisterPage">Register,Join us!</string>
    <string name="app_name">LEvernote</string>
    <string name="name">userName</string>
    <string name="password">Password:</string>
    <string name="Login">Login:</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="attempts">Attempts Left:</string>
    <string name="AddTask">Addtask</string>
    <string name="Logout">Logout</string>
    <string name="Home">Home</string>
    <string name="Confirmpassword">Confirm Password</string>
</resources>
