<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/View1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" 随时记录一切"
        android:textSize="29sp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edit_activity_login_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_star"
        android:drawablePadding="8dp"
        android:hint="Add your task here"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/View1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_activity_login_addtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddTask"
        android:layout_marginBottom="14dp"
        android:layout_above="@+id/btn_activity_login_logout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <EditText
        android:id="@+id/edit_activity_login_tasklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_home"
        android:drawablePadding="8dp"
        android:hint="TaskList"
        android:layout_below="@+id/edit_activity_login_task"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <Button
        android:id="@+id/btn_activity_login_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_reply"
        android:text="@string/Logout"
        android:onClick="logout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_activity_login_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="delete"
        android:layout_above="@+id/btn_activity_login_addtask"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_activity_login_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_home"
        android:text="@string/Home"
        android:onClick="home"
        android:layout_alignTop="@+id/btn_activity_login_delete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>